<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_info_icecream"
            android:icon="@drawable/ic_baseline_icecream_24"
            android:title="@string/label_fragment_flavours" />


        <item
            android:id="@+id/nav_contact_info"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/menu_contact_info" />

        <item
            android:id="@+id/nav_f_a_q"
            android:icon="@drawable/ic_baseline_question_answer_24"
            android:title="@string/menu_f_a_q" />

        <item
            android:id="@+id/nav_ice_cream"
            android:icon="@drawable/ic_baseline_icecream_24"
            android:title="@string/label_fragment_flavours" />

        <item
            android:id="@+id/nav_credit"
            android:icon="@drawable/ic_baseline_icecream_24"
            android:title="@string/label_fragment_credit" />




    </group>
</menu>