<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactFragment">




    <Button
        android:id="@+id/callButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/phone"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck,TextContrastCheck" />
    <Button
        android:id="@+id/emailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/email_button"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/address"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/faceBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/facebook"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck,TextContrastCheck" />






</LinearLayout>