<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.friedicecream.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.friedicecream.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/nav_contact_info"
        android:name="com.example.friedicecream.ContactFragment"
        android:label="@string/menu_contact_info"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/nav_company_info"
        android:name="com.example.friedicecream.CompanyInfoFragment"
        android:label="@string/menu_company_info"
        tools:layout="@layout/fragment_company_info" />
    <fragment
        android:id="@+id/nav_f_a_q"
        android:name="com.example.friedicecream.ListView.FAQsFragment"
        android:label="@string/menu_f_a_q"
        tools:layout="@layout/fragment_f_a_qs" />
    <fragment
        android:id="@+id/nav_ice_cream"
        android:name="com.example.friedicecream.RecyclerView.IceCreamFragment"
        android:label="ice Cream"
        tools:layout="@layout/fragment_ice_cream" >
        <action
            android:id="@+id/action_nav_ice_cream_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_ice_cream_to_iceCreamDetailed"
            app:destination="@id/iceCreamDetailed" />
        <action
            android:id="@+id/action_nav_ice_cream_to_iceCreamDetailed2"
            app:destination="@id/iceCreamDetailed" />
        <action
            android:id="@+id/action_nav_ice_cream_to_iceCreamDetailed3"
            app:destination="@id/iceCreamDetailed" />
    </fragment>
    <fragment
        android:id="@+id/nav_info_icecream"
        android:name="com.example.friedicecream.ViewPager.InfoFragment"
        android:label="fragment_nav_info_icecream"
        tools:layout="@layout/fragment_info_icecream" />
    <fragment
        android:id="@+id/iceCreamDetailed"
        android:name="com.example.friedicecream.iceCreamDetailed"
        android:label="fragment_ice_cream_detailed"
        tools:layout="@layout/fragment_ice_cream_detailed"
        app:enterAnim="@anim/anim_in"
        app:exitAnim="@anim/anim_out"
        app:popEnterAnim="@anim/anim_back_in"
        app:popExitAnim="@anim/anim_back_out"/>
        />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.friedicecream.SettingsFragment"
        android:label="fragment_seetings" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.friedicecream.CartListView.CartFragment"
        android:label="fragment_nav_cart"
        tools:layout="@layout/fragment_nav_cart" />
</navigation>